fix: force-refresh CSS/JS on Pages with cache-busting query params

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Developer-portfolio inspired fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=20251031">
 </head>
 <body>
   <!-- Subtle animated aurora background (lightweight, single overlay) -->
@@ -380,7 +380,7 @@ Recently, I was crowned Champion of the DIU Intra First Practice CTF, a mileston
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20251031"></script>
   </div>
 </body>
 </html>
